mongo/basic.txt

C:\Users\april>mongosh
Current Mongosh Log ID: 66a9f91a24da2bdc32c4e49a
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.12
Using MongoDB:          7.0.12
Using Mongosh:          2.2.12
mongosh 2.2.15 is available for download: https://www.mongodb.com/try/download/shell

For mongosh info see: https://docs.mongodb.com/mongodb-shell/

------
   The server generated these startup warnings when booting
   2024-07-26T10:51:01.355+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------
test> show dbs
Tommorow  120.00 KiB
admin      40.00 KiB
config    108.00 KiB
local      72.00 KiB
today      48.00 KiB
work      288.00 KiB
test> use july
switched to db july
july> show dbs
Tommorow  120.00 KiB
admin      40.00 KiB
config    108.00 KiB
local      72.00 KiB
today      48.00 KiB
work      288.00 KiB
july> show collections

july> db.week.in
db.week.insertMany                 db.week.insertOne
db.week.initializeOrderedBulkOp    db.week.initializeUnorderedBulkOp

july> db.week.insert
db.week.insertMany  db.week.insertOne

july> db.week.insertOne({"name":
...
... "raj", "age":25})
{
  acknowledged: true,
  insertedId: ObjectId('66a9fa7724da2bdc32c4e49b')
}
july> db.week.insertOne({ "name": "kumar", "age": 28 })
{
  acknowledged: true,
  insertedId: ObjectId('66a9fa9124da2bdc32c4e49c')
}
july> show dbs
Tommorow  120.00 KiB
admin      40.00 KiB
config    108.00 KiB
july       72.00 KiB
local      72.00 KiB
today      48.00 KiB
work      288.00 KiB
july> show collections
week
july> db.week.find()
[
  { _id: ObjectId('66a9fa7724da2bdc32c4e49b'), name: 'raj', age: 25 },
  { _id: ObjectId('66a9fa9124da2bdc32c4e49c'), name: 'kumar', age: 28 }
]
july> db.week.find().pretty()
[
  { _id: ObjectId('66a9fa7724da2bdc32c4e49b'), name: 'raj', age: 25 },
  { _id: ObjectId('66a9fa9124da2bdc32c4e49c'), name: 'kumar', age: 28 }
]
july> db.week.find()
[
  { _id: ObjectId('66a9fa7724da2bdc32c4e49b'), name: 'raj', age: 25 },
  { _id: ObjectId('66a9fa9124da2bdc32c4e49c'), name: 'kumar', age: 28 }
]
july> db.week.insertMany([ { "name": "raj", "age": 25 }, {"name":"tarun", "roll":78})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:78)

> 1 | db.week.insertMany([ { "name": "raj", "age": 25 }, {"name":"tarun", "roll":78})
    |
      ^
  2 |

july> db.week.insertMany([ { "name": "raj", "age": 25 }, {"name":"tarun", "roll":78} ])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('66a9fbbd24da2bdc32c4e49d'),
    '1': ObjectId('66a9fbbd24da2bdc32c4e49e')
  }
}
july> db.week.find()
[
  { _id: ObjectId('66a9fa7724da2bdc32c4e49b'), name: 'raj', age: 25 },
  { _id: ObjectId('66a9fa9124da2bdc32c4e49c'), name: 'kumar', age: 28 },
  { _id: ObjectId('66a9fbbd24da2bdc32c4e49d'), name: 'raj', age: 25 },
  {
    _id: ObjectId('66a9fbbd24da2bdc32c4e49e'),
    name: 'tarun',
    roll: 78
  }
]
july>
